--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/vision": "3.24.1",
     "next": "14.0.1",
+    "next-sanity": "^7.0.10",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sanity": "^3.24.1",
     "use-theme": "^0.1.5"
   },
   "devDependencies": {
